--- a/bundle/templates/index.html
+++ b/bundle/templates/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <script type="text/javascript" src="main.js" />
+      <script type="text/javascript" src="main.js"></script>
       <title>${projectName}</title>
    </head>
    <body>
