--- a/bundle/project/assets/default.css
+++ b/bundle/project/assets/default.css
@@ -3,6 +3,10 @@ body {
     margin: 0px;
 }
 
+zbutton {
+    border: 0;
+}
+
 vbox {
     display: flex;
     justify-content: flex-start;
@@ -23,10 +27,22 @@ toolbar {
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    height: 3rem;
-    background: #33AA11;
+    height: 4rem;
+    background: #1e92b5;
+}
+
+toolbar .left {
+    padding: 0 1.5em 0 1em;
 }
 
 toolbar .title {
     color: #fff;
+    font-size: 20pt;
+    font-weight: bold;    
+}
+
+toolbar zbutton {
+    width: 2.6em;
+    height: 2.6em;
+    background-size: 2.6em;
 }
