--- a/bundle/project/assets/default.css
+++ b/bundle/project/assets/default.css
@@ -27,7 +27,7 @@ toolbar {
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    height: 4rem;
+    height: 7vh;
     background: #1e92b5;
 }
 
